Fix unnecessary word splitting
Adding .break-all to div wrapping details sometimes caused unnecessary breaks in short words that could have just wrapped to the next line (mostly in description field, see ZZ Plant to reproduce). Adding overflow-wrap directly to description divs is less aggressive but still splits long strings with no spaces. Still need .break-all on species/location/etc fields (otherwise we truncate entire words which makes species hard to read, with .break-all we get as much as will fit and then truncate mid-word with ellipses - this is perfect for single-line text but doesn't work for multi-line like description).

Adding .min-w-0 to .collapse-content is an extra insurance policy - this alone prevents the card from expanding width but does not allow long strings without spaces to line wrap (just truncates first line). Overrides default min-width auto (= width of longest unbreakable word) so div can shrink, might be some other edge case where this prevents width expanding.

--- a/src/main.css
+++ b/src/main.css
@@ -183,3 +183,10 @@ html[data-theme="light"] .pot-size-selected::placeholder {
 .floating-footer-visible {
     @apply translate-y-0 scale-100 opacity-100;
 }
+
+/* Allows breaking long strings with no spaces to prevent overflow */
+/* Only breaks words if there is no other opportunity (eg spaces) */
+.break-anywhere {
+    overflow-wrap: anywhere;
+    word-break: break-word;;
+}
